사이드바추가

--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -300,7 +300,59 @@ label[for] {
 *>.flex-1-0-0 {
   flex: 1 0 0;
 }
+.flex-self-c{
+  display: flex;
+  align-self: center;
+}
 
+@media (min-width:800px){
+  .window-md-down{
+    display: none;
+  }
+}
+@media (max-width:799px){
+  .window-md-up{
+    display: none;
+  }
+}
+
+.btn-toggle-mobile-side-bar{
+  position: relative;
+  width: 30px;
+  height: 30px;
+}
+.btn-toggle-mobile-side-bar>div{
+  position: absolute;
+  top: 0%;
+  left: 0;
+  width: 100%;
+  height: 20%;
+  background-color: white;
+  transition: top .3s .3s ,transform .3s, opacity .3s .3s;
+}
+.btn-toggle-mobile-side-bar>div:nth-child(2){
+  top: 40%;
+
+}
+.btn-toggle-mobile-side-bar>div:nth-child(3){
+  top: 80%;
+}
+.btn-toggle-mobile-side-bar.active>div:nth-child(1){
+  transform: rotate(45deg);
+  
+}
+.btn-toggle-mobile-side-bar.active>div:nth-child(3){
+  transform: rotate(-45deg);
+  
+}
+.btn-toggle-mobile-side-bar.active>div:nth-child(2){
+  opacity: 0;
+  
+}
+.btn-toggle-mobile-side-bar.active>div{
+  top: 40%;
+  transition: top .3s,transform .3s .3s,opacity 0.2s;
+}
 .menu-box>ul>li>a {
   padding: 20px;
   color: white;
@@ -315,4 +367,41 @@ label[for] {
 .top-bar{
   background-color: black;
 }
-
+.mobile-top-bar{
+  position: fixed;
+  width:100%;
+  height: 70px;
+  background-color: black;
+}
+.mobile-side-bar{
+  position: fixed;
+  width: 300px;
+  bottom: 0;
+  top: 62px;
+  left: -300px;
+  background-color: black;
+  transition: left 1s;
+}
+.mobile-side-bar.active{
+  left: 0;
+}
+.mobile-top-bar>.btn-toggle-mobile-side-bar{
+  margin:0 20px;
+}
+.background{
+  position: fixed;
+  width:100%;
+  background-color:rgba(0, 0, 0, 0);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top:62px;
+  visibility: hidden;
+}
+.background.active{
+  background-color:rgba(0,0,0,0.8);
+  visibility: visible;
+}
+html.active body {
+  overflow-y: hidden;
+}
