모바일 사이드 메뉴 추가

--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -365,13 +365,13 @@ label[for] {
   color: black;
 }
 .top-bar{
-  background-color: black;
+  background-color: rgba(11, 3, 20, 0.986);
 }
 .mobile-top-bar{
   position: fixed;
   width:100%;
   height: 70px;
-  background-color: black;
+  background-color: rgba(11, 3, 20, 0.986);
 }
 .mobile-side-bar{
   position: fixed;
@@ -379,7 +379,7 @@ label[for] {
   bottom: 0;
   top: 62px;
   left: -300px;
-  background-color: black;
+  background-color: rgba(11, 3, 20, 0.986);
   transition: left 1s;
 }
 .mobile-side-bar.active{
@@ -404,4 +404,38 @@ label[for] {
 }
 html.active body {
   overflow-y: hidden;
+}
+.side-box ul ul{
+  display: none;
+  position:absolute;
+}
+.side-box ul>li.active>ul{
+  display: block;
+}
+.side-box ul>li>a{
+  display: block;
+  color: white;
+  padding: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+.side-box>ul>li:hover>a{
+  background-color: whitesmoke;
+  color: black;
+}
+.side-box>ul ul>li>a{
+  margin-left: 30px;
+  padding: 5px;
+}
+.side-box ul >li>a:not(:only-child)::after{
+  content:"[+]";
+  float: right;
+}
+.side-box ul >li.active>a:not(:only-child)::after{
+  content: "[-]";
+}
+@media(max-width:799px){
+  .mobile-side-bar.actived{
+    overflow-y: hidden;
+  }
 }
