--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -315,19 +315,25 @@ label[for] {
     display: none;
   }
 }
+@media(max-width:799px){
+  .mobile-side-bar.active{
+    width: 100%;
+  }
+}
 
 .btn-toggle-mobile-side-bar{
-  position: relative;
-  width: 30px;
-  height: 30px;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 0;
 }
 .btn-toggle-mobile-side-bar>div{
   position: absolute;
   top: 0%;
-  left: 0;
+  right: 0;
   width: 100%;
   height: 20%;
-  background-color: white;
+  background-color: black;
   transition: top .3s .3s ,transform .3s, opacity .3s .3s;
 }
 .btn-toggle-mobile-side-bar>div:nth-child(2){
@@ -353,9 +359,20 @@ label[for] {
   top: 40%;
   transition: top .3s,transform .3s .3s,opacity 0.2s;
 }
+.menu-box{
+  margin-bottom: 150px;
+}
+.menu-box>ul{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 80px;
+
+}
 .menu-box>ul>li>a {
   padding: 20px;
-  color: white;
+  color: black;
+  display: block;
+  font-size: 14px;
   font-weight: bold;
 
 }
@@ -365,25 +382,28 @@ label[for] {
   color: black;
 }
 .top-bar{
-  background-color: rgba(11, 3, 20, 0.986);
+  background-color: white;
 }
 .mobile-top-bar{
   position: fixed;
   width:100%;
   height: 70px;
-  background-color: rgba(11, 3, 20, 0.986);
+  top: 0;
+  left: 0;
+  background-color: white;
 }
 .mobile-side-bar{
   position: fixed;
-  width: 300px;
+  width: 0;
   bottom: 0;
-  top: 62px;
-  left: -300px;
-  background-color: rgba(11, 3, 20, 0.986);
-  transition: left 1s;
+  top: 0;
+  right: -300px;
+  background-color: white;
+  transition: rigth 1s , width 1s
 }
 .mobile-side-bar.active{
-  left: 0;
+  right: 0;
+  width: 100%;
 }
 .mobile-top-bar>.btn-toggle-mobile-side-bar{
   margin:0 20px;
@@ -395,7 +415,7 @@ label[for] {
   bottom: 0;
   left: 0;
   right: 0;
-  top:62px;
+  top:0;
   visibility: hidden;
 }
 .background.active{
@@ -412,30 +432,60 @@ html.active body {
 .side-box ul>li.active>ul{
   display: block;
 }
+.side-box ul>li{
+  margin-top: 50px;
+}
 .side-box ul>li>a{
   display: block;
-  color: white;
+  color: rgb(82, 69, 52);
   padding: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
   font-weight: bold;
+  
 }
-.side-box>ul>li:hover>a{
-  background-color: whitesmoke;
-  color: black;
-}
+
 .side-box>ul ul>li>a{
   margin-left: 30px;
   padding: 5px;
+  margin-top: 100px;
+  display: block;
 }
-.side-box ul >li>a:not(:only-child)::after{
-  content:"[+]";
-  float: right;
-}
-.side-box ul >li.active>a:not(:only-child)::after{
-  content: "[-]";
-}
+
 @media(max-width:799px){
   .mobile-side-bar.actived{
     overflow-y: hidden;
   }
+}
+
+.mobile-side-bar>.close{
+  position: absolute;
+ 
+  margin-top: 10px;
+  right: 0;
+  margin-right: 20px;
+}
+
+.mobile-side-bar>.close>a{
+  display: block;
+  color: black;
+}
+.mobile-side-bar>.close.active>a{
+  display: none;
+}
+
+@media(max-width: 799px){
+  body {
+    padding-top: 70px;
+  }
+}
+.bn-bar>.img-box>img{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.logo>img{
+  position: absolute;
+  top: 5px;
+  left: 70px;
 }
