--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -1,8 +1,9 @@
 /* 폰트적용 */
-@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400&display=swap');
+
 
 html {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Noto Sans KR","roboto";
 }
 
 /* 노말라이즈 */
@@ -30,11 +31,16 @@ label[for] {
   margin-left: auto;
   margin-right: auto;
 }
-
-.con {
-  max-width: 800px;
+.con-2{
+    margin-left: auto;
+  margin-right: auto;
 }
-
+.con {
+  max-width: 1500px;
+}
+.con-2{
+    max-width: 1350px;
+}
 .block {
   display: block;
 }
@@ -259,7 +265,9 @@ label[for] {
 *>.flex {
   display: flex;
 }
-
+* > .flex-wrap {
+    flex-wrap:wrap;
+}
 *>.flex-column-nowrap {
   display: flex;
   flex-flow: column nowrap;
@@ -365,22 +373,23 @@ label[for] {
 .menu-box>ul{
   display: flex;
   justify-content: flex-end;
-  margin-right: 80px;
+  margin-right: 10%;
+  padding-top:10px;
 
 }
 .menu-box>ul>li>a {
   padding: 20px;
-  color: black;
+  color: rgb(71, 57, 57);
   display: block;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
 
 }
-
-.menu-box>ul>li:hover>a {
-  background-color: white;
-  color: black;
+.menu-box>ul>li:hover>a{
+    color: rgb(104, 89, 83);
 }
+
+
 .top-bar{
   background-color: white;
 }
@@ -482,10 +491,197 @@ html.active body {
   margin-left: auto;
   margin-right: auto;
   display: block;
+  margin-top:-90px;
 }
 
 .logo>img{
   position: absolute;
-  top: 5px;
-  left: 70px;
+  margin-left:12%;
+  margin-top: 20px;
+  width: 250px;
+}
+.about-me-logo{
+    margin-top:100px;
+
+}
+.about-me-logo>.text-logo>a{
+    display: block;
+    font-size: 30px;
+    font-weight: 500;
+    
+    padding: 10px 0;
+}
+.profile-img>img{
+    display: block;
+    margin-top:10%;
+    margin-left: -10%;
+
+}
+.profile-text>ul{
+    position: absolute;
+    top: 0;
+}
+.portfolio>.portfolio-logo>a{
+    display: block;
+    font-size: 30px;
+    margin-top:100px;
+    
+    font-weight: 500;
+    
+    padding: 10px 0;
+}
+.portfolio-logo{
+    border-bottom: solid black 2.5px;
+}
+.portfolio-list>ul>li{
+    width: calc(100%/4);
+    padding: 20px 15px;
+    box-sizing: border-box;
+}
+.portfolio-list>ul{
+    margin: 0 -15px;
+    margin-top: 100px;
+}
+.portfolio-list>ul>li>div>img{
+    height: 480px;
+}
+.update>.update-logo{
+    border-bottom: solid black 2.5px;
+    margin-top: 100px;
+}
+.update>.update-logo>a{
+    display: block;
+    font-size: 30px;
+    
+    font-weight: 500;
+    
+    padding: 10px 0;
+    
+}
+.update-list>ul{
+    margin-top:80px;
+}
+.update-list>ul>li>.update-box>.img-box2{
+    float: left;
+    display: block;
+    padding-right: 30px;
+    padding: 20px;
+    padding-left: 0;
+}
+.update-list>ul>li>.update-box::after{
+    content: "";
+    display: block;
+    clear: both;
+
+}
+.update-list>ul>li>.update-box>.update-text{
+    padding: 20px 10px;
+    line-height: 24px;
+}
+
+.update-list>ul>li>.update-box>.update-title{
+    padding: 30px;
+    padding-bottom: 0;
+}
+.update-list>ul>li>.update-box>.update-title>a{
+    display: block;
+    font-size: 1.3rem;
+    font-weight: 600
+}
+.update-list>ul>li>.update-box{
+    border-bottom: solid rgb(216, 216, 216) 1px;
+
+}
+
+.update-list>ul>li>.update-box>.date>a{
+    display: block;
+    font-size: 12px;
+    
+    color: rgb(175, 175, 175, 119);
+}
+.update-list>ul>li>.update-box>.update-text>a{
+    display: block;
+    color: rgb(126, 126, 126);
+}
+
+.most-popular-logo>a{
+    display: block;
+    font-size: 30px;
+    font-weight: 500;
+    padding: 10px 0;
+}
+.most-popular-logo{
+    margin-top: 100px;
+    border-bottom: solid black 2.5px;
+}
+.most-popular-list {
+    overflow-x: hidden;
+}
+.most-popular-list>ul {
+    margin: 0 -10px;
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
+.most-popular-list>ul>li{
+    width: calc(100%/4);
+    float: left;
+    box-sizing: border-box;
+    padding: 0 10px;
+}
+.most-popular-list>ul::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+.most-popular-list>ul>li>.popular-box>.popular-text{
+    display: block;
+    overflow: hidden;
+    max-height: 79px;
+    line-height: 1.71;
+}
+.most-popular-list>ul>li>.popular-box>.img-box2 {
+    display: block;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.most-popular-list>ul>li>.popular-box>.img-box2::after {
+    content: "";
+    display: block;
+    padding-top: 60.6666%;
+}
+.most-popular-list>ul>li>.popular-box:hover>.img-box2::before{
+    background-color: rgb(0,0,0,0.5);
+    z-index: 1;
+}
+.most-popular-list>ul>li>.popular-box>.popular-title{
+    padding: 10px 0;
+}
+.most-popular-list>ul>li>.popular-box>.popular-title>a{
+    display: block;
+    font-size: 18px;
+    font-weight: 600;
+
+}
+.most-popular-list>ul>li>.popular-box:hover>.popular-title>a{
+    color: rgb(83, 82, 82);
+}
+.most-popular-list>ul>li>.popular-box>.popular-text>a{
+    color: rgb(112, 112, 112);
+    display: block;
+}
+.copyright{
+    background-color: black;
+    width: 100%;
+    height: 200px;
+    margin-top: 150px;
+}
+.copyright>.text>a{
+    display: block;
+    color: rgb(236, 228, 228);
+    text-align: center;
+    width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top:50px;
 }
