--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -328,7 +328,13 @@ label[for] {
     width: 100%;
   }
 }
-
+.bn-slider>div{
+  margin-top: 100px;
+  width: 100%;
+  position: relative;
+  height:79vh;
+  background-size: cover;
+}
 .btn-toggle-mobile-side-bar{
   position: absolute;
   width: 20px;
@@ -367,39 +373,57 @@ label[for] {
   top: 40%;
   transition: top .3s,transform .3s .3s,opacity 0.2s;
 }
-.menu-box{
-  margin-bottom: 150px;
+.top-bar{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  left: 0;
+  max-width: 1980px;
+  z-index: -4;
 }
 .menu-box>ul{
   display: flex;
-  justify-content: flex-end;
-  margin-right: 10%;
-  padding-top:10px;
+  justify-content:center;
+  padding-top:1.7%;
+  margin-right: 25%;
 
+}
+.menu-box>ul>li{
+  position: relative;
+  
+  color: #000;
+  padding: 15px 40px;
 }
 .menu-box>ul>li>a {
-  padding: 20px;
-  color: rgb(71, 57, 57);
+  color: rgb(0, 0, 0);
   display: block;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 15px;
+  font-weight: initial;
+  position: relative;
+  z-index: 1;
 
 }
-.menu-box>ul>li:hover>a{
-    color: rgb(104, 89, 83);
+.menu-box>ul>li>a::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 0;
+    background: #ebc574;
+    transition: height 0.2s;
 }
+.menu-box>ul>li>a:hover:after{
+height: 35%;
+z-index: -1;}
 
-
-.top-bar{
-  background-color: white;
-}
 .mobile-top-bar{
   position: fixed;
   width:100%;
   height: 70px;
   top: 0;
   left: 0;
-  background-color: white;
 }
 .mobile-side-bar{
   position: fixed;
@@ -487,21 +511,20 @@ html.active body {
     padding-top: 70px;
   }
 }
-.bn-bar>.img-box>img{
+.bn-bar>div{
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top:-90px;
-}
+  padding-top: 100px;}
 
 .logo>img{
   position: absolute;
-  margin-left:12%;
-  margin-top: 20px;
+  margin-top: 1.5%;
   width: 250px;
+  z-index: 100;
 }
 .about-me-logo{
-    margin-top:100px;
+    margin-top:1000px;
 
 }
 .about-me-logo>.text-logo>a{
@@ -610,6 +633,7 @@ html.active body {
     font-weight: 500;
     padding: 10px 0;
 }
+
 .most-popular-logo{
     margin-top: 100px;
     border-bottom: solid black 2.5px;
@@ -685,3 +709,57 @@ html.active body {
     margin-right: auto;
     padding-top:50px;
 }
+.sns::after{
+  content: "";
+  display: block;
+  clear: both;
+}
+.sns-icon{
+  float: right;
+  margin-top: 2%;
+}
+.bn-slider-bar .side-bars > div {
+  position:absolute;
+  top:0;
+  left:0;
+  width:calc(50% - 100px);
+  height:100%;
+  cursor:pointer;
+}
+.bn-slider-bar .side-bars > div:active > span {
+  transform:translateY(-40%);
+}
+.bn-slider-bar .side-bars > div > span {
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  left:inherit;
+  right:inherit;
+  font-size:5rem;
+  transition: transform 0.2s;
+  margin:0 10px;
+}
+.bn-slider-bar .side-bars > div:last-child {
+  left:auto;
+  right:0;
+}
+
+.bn-slider-bar > .bn-slider > div {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  opacity:0;
+  transition:opacity 0.5s;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:cover;
+ 
+}
+
+.bn-slider-bar > .bn-slider > div.active {
+  opacity:1;
+}
+
+
+/* 메뉴 효과!*/
