마롱마롱 모작 3차

--- a/public/portfolio/마롱마롱/index.css
+++ b/public/portfolio/마롱마롱/index.css
@@ -1,9 +1,10 @@
 /* 폰트적용 */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,700;0,800;0,900;1,100;1,200;1,700;1,800&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700;900&display=swap');
 html {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'roboto', sans-serif;
 }
 
 /* 노말라이즈 */
@@ -36,10 +37,10 @@ label[for] {
   margin-right: auto;
 }
 .con {
-  max-width: 1180px;
+  max-width: 1170px;
 }
 .con-2{
-    max-width: 1170px;
+    max-width: 1920px;
 }
 .block {
   display: block;
@@ -191,10 +192,10 @@ label[for] {
 .logo{
     position: absolute;
     top: 20px;
-    left: 10px;
+    left: 14px;
 }
 .logo>a>img{
-    width: 220px;
+    width: 213.33px;
     display: block;
     
 }
@@ -202,6 +203,7 @@ label[for] {
     position: absolute;
     right: 0;
     z-index: 100;
+    top:0;
 }
 .menu-box>ul::after{
     content: "";
@@ -210,8 +212,8 @@ label[for] {
 }
 .menu-box>ul{
     
-    
-    margin-right: 0;
+    margin-top:-1px;
+    margin-right: -4px;
 }
 .menu-box>ul>li{
     float: left;
@@ -221,12 +223,14 @@ label[for] {
     padding: 20px;
     padding-top:30px;
     color: #fff;;
-    font-size: 12px;
+    font-size: 13.23px;
     font-weight: 600;
+    letter-spacing: .5px;
+    transition: color .4s;
 }
 .menu-box>ul>li:hover>a{
     color: rgba(236, 196, 173, 0.541);
-    transition: color .5s;
+    transition: color .4s;
 
 
 }
@@ -284,6 +288,9 @@ label[for] {
 
 .middle{
   height: auto;
+  
+  
+  margin-bottom:-5%;
 }
 .middle::after{
   content: "";
@@ -312,7 +319,7 @@ label[for] {
   width: 1px;
   height: 20px;
   left: 0;
-  background-color: #ff2a00;
+  background-color: #f84c00;
   margin-top:3%;
   margin-left: 25%;
   float: left;
@@ -337,11 +344,31 @@ label[for] {
 .text{
   white-space: nowrap;
 }
+.content-box{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+}
+.content-box>.title{
+  margin-bottom: 4%;
+  color: #232323;
+  font-size: 16px;
+  line-height: 23px;
+}
+.content-box>.content-text{
+  width: 90%;
+  font-size: 14px;
+  color: #6f6f6f;
+  line-height: 23px
+}
+
+}
 .content-box>.content-text{
   width:90%;
   font-size: 14px;
   height: 200px;
   color: #6f6f6f;
+ 
+}
 }
 .top{
   
@@ -359,9 +386,11 @@ label[for] {
   background-position: center;
   width: 50%;
 }
+.card-text{
+  width: 25%;
+}
 .card-padding{
   padding: 80px;
-  width: 20%;
 }
 .container::after{
   content: "";
@@ -369,23 +398,66 @@ label[for] {
   display: block;
 
 }
-.card-padding>h5>span{
+.card-padding>div>span{
   font-size: 35.5px;
   line-height: 110%;
-  letter-spacing: -1px;
-  font-weight: bold;}
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-family: "Fjalla One";
+  font-size: 36pt;
+  color: #232323;
 
+
+
+  }
+.card-padding>div>span:first-of-type{
+      font-size: 31.5pt;
+    }
   .card-line{
     background-color: black;
-    width:250%;
+    width:70%;
     height: 5px;
+    margin:20px 0;
   }
   .card-padding>p{
-    width: 300%;
-    font-size: 15px;
+    width: 95%;
+    font-size: 14.5px;
     color: #6f6f6f;
-    padding:20px 0;
-    line-height: 120%;
+    padding:10px 0;
+    line-height: 190%;
+    display: flex;
+    font-family: "sans-serif";
+    
+  }
+  .card-padding>a{
+    font-size: 11.5px;
+    text-align: center;
+    width:91px ;
+    display:block;
+    background-color: #232323;
+    color: rgb(255, 255, 255);
+    padding:9px 0;
+    border-radius: 5px;
+    border:solid 2px #232323;
+    font-family: 'Montserrat', 'sans-serif';
+    font-weight: 600;
+    
+    transition:background-color .4s;
+  }
+  .card-padding>a:hover{
+    background: transparent;
+    color: #232323;
+    padding: 9px 0;
+    transition:background-color .5s;
+}
+
+  }
+  .card-padding>p:first-of-type{
+    font-size: 14.5px;
+    font-family:"roboto";
+    line-height: 190%;
+    letter-spacing: normal;
+    margin-bottom:-10%;
   }
   .plant{
     background-size:cover;
@@ -405,20 +477,66 @@ label[for] {
 
   }
   .project-menu-box>ul>li{
-    margin:   4px 20px;
+    margin:   0px 25px;
   }
   .project-menu-box>ul>li>a{
     display: block;
-    
+    font-family: 'Montserrat', sans-serif;
     font-size: 13px;
     letter-spacing: -1px;
-    color: #686868;
-    font-weight: bold;
+    color: #494949;
+    font-weight: 600;
+    line-height: 120%;
   }
   .project-menu-box>ul>li:first-of-type>a{
-    border-bottom: black solid 1px;
+    border-bottom: #232323 solid 1px;
   }
   .project-menu-box>ul>li:hover>a{
-    border-bottom: black solid 1px;
+    border-bottom: #232323 solid 1px;
     color: black;
+    
   }
+  .pf-box>ul{
+    height: 1159.17px;
+    position: relative;
+    margin:5px;
+  }
+  .pf-box>ul>li>a{
+    padding: 5px 5px;
+  }
+.pf-box>ul>li>a{
+  float: left
+  ;
+
+  width: calc(100%/4);
+  box-sizing: border-box;
+}
+.pf-box>ul>li>a>.figure{
+  position: relative;
+}
+.pf-box>ul>li>a>.figure>div>img{
+  position: relative;
+  cursor: pointer;
+  display: block;
+  opacity: 1;
+  top: 0;
+  width: 100%;
+  transition:width 3s;
+}
+.pf-box>ul>li>a>.figure:hover>div{
+  position: relative;
+
+}
+.pf-box>ul>li>a>.figure{
+  overflow: hidden;
+}
+.pf-box>ul>li>a>.figure:hover>div>img{
+  position: relative;
+  top: -101px;
+  background-color: blue;
+  transition: all 0.3s ease 0s;
+  
+}
+  
+  html{
+    scroll-behavior: smooth;}
