--- a/public/portfolio/이솝/index.css
+++ b/public/portfolio/이솝/index.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300;400&family=Tenor+Sans&display=swap');
+html{
+  font-family: 'Nanum Myeongjo', serif;
+font-family: 'Roboto', sans-serif;
+}
 body,ul,
 li,
 h1 {
@@ -26,10 +33,10 @@ label[for] {
   margin-right: auto;
 }
 .con {
-  max-width: 1170px;
+  max-width: 1920px;
 }
 .con-2{
-    max-width: 1920px;
+    max-width: 1700px;
 }
 .block {
   display: block;
@@ -165,8 +172,22 @@ label[for] {
 .top-dv-bar{
     background-color: #A6672B;
     width: 100%;
-    height: 41px;
+    height: 0;
+    animation-name: menuBar;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    overflow: hidden;
 }
+@keyframes menuBar{
+  0%{
+    height: 0;
+  }
+
+  100%{
+    height: 41px;
+  }
+}
+
 .top-dv-bar>a{
     display: flex;
     justify-content: center;
@@ -175,10 +196,23 @@ label[for] {
     color: #FFFEF2;
     font-size: 14px;
 }
+
 .shopping-bar{
     background-color: #252525;
     width: 100%;
     height: 48px;
+    animation-name: spBar;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    overflow: hidden;
+}
+@keyframes spBar{
+  0%{
+    height: 0;
+  }
+  100%{
+    height: 46.5px;
+  }
 }
 .shopping-bar>a>svg{
     fill:white;
@@ -356,7 +390,7 @@ body, ul, li, h1, h2, h3, h4 {
 .my-slider-1 > .owl-carousel > .owl-nav > .owl-next{
     position:absolute;
   top:62%;
-  right:-200px;
+  right:-100px;
   transition:right .4s;
 }
 
@@ -376,4 +410,173 @@ button{
 }
 .owl-carousel{
   display: block;
+}
+.item>h4>a{
+  display: block;
+  font-size: 14px;
+  text-align: center;
+  font-weight: normal;
+  max-width: 378px;
+  line-height: 1.6;
+
+}
+.item>h4>a:nth-of-type(1):hover>span{
+  border-bottom: solid 1px black;
+  width: 100%;
+}
+.item>h4>a:nth-of-type(2){
+  color: #5f5f5f;
+}
+body{
+  background-color: #FFFEF2;
+}
+.slider-line{
+  position: relative;
+  background-color: rgb(172, 172, 172);
+  height: 2px;
+  width: 1765px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  
+
+}
+.cursor-line{
+  width: 16%;
+  height: 2px;
+  background-color: black;
+  position: absolute;
+  z-index: 999;
+
+}
+.about-item{
+  margin-top: 13%;
+}
+.about-item-2{
+  margin-top: 5%;
+}
+.about-text>ul::after{
+  content: "";
+  clear: both;
+  display: block;
+}
+.about-img>img{
+  display: block;
+  width: 100%;
+}
+.about-text>ul>li{
+  box-sizing: border-box;
+}
+.about-text>ul>li:nth-of-type(2){width: 59%;float: left;
+}
+.about-text>ul>li:nth-of-type(1){
+  width: 41%;float: left;
+  
+}
+.ab-title{
+  padding: 115px;
+  padding-top: 0;
+}
+.ab-title>h1{
+  font-weight: lighter;
+  font-family: 'Nanum Myeongjo', serif;
+  color: #363632;
+  font-size: 30px;
+}
+.ab-title>h5{
+  line-height:1.7 ;
+  font-weight: normal;
+  font-size: 16px;
+}
+.ab-title>.ab-view{
+  width: 205px;
+  height: 37px;
+  border:1px solid rgba(51, 51, 51, .2);
+  margin-top:40px;
+  padding-top:20px;
+  font-size: 14px;
+  color: #333;
+  
+  transition: background-color .3s;
+}
+.ab-title>.ab-view:hover{
+  background-color: #333;
+  color: #FFFEF2;
+}
+.ab-title>.ab-view::after{
+  content: "";
+  clear: both;
+  display: block;
+}
+.ab-title>.ab-view>a{
+  float: left;
+  margin-left: 25px;
+}
+.ab-title>.ab-view>i{
+  float: left;
+  margin-left: 70px;
+  margin-top:3px;
+}
+.about-item-2>.about-text>ul>li>.ab-title>.ab-view>i{
+  float: left;
+  margin-left: 47px;
+  margin-top:3px;
+}
+.about-img>h1{
+  font-size: 15px;
+  padding: 30px;
+  font-weight: normal;
+  border-bottom: solid 1px #5f5f5f;
+}.bottom-text{
+  text-align: center;
+  padding: 190px;
+}
+.bottom-text>h1{
+  font-family:'Source Serif Pro', serif;
+  font-weight: 400;
+  font-size:1.8rem ;
+  color: #333;
+}
+.bottom-text>h5{
+  font-weight: normal;
+  font-size: 14px;
+}
+.copy-light{
+  border-top: 1px solid rgba(51, 51, 51, .2);
+}
+.text-bar-2{
+  white-space: nowrap;
+}
+.text-box{
+  display: flex;
+  white-space: nowrap;
+}
+.text-box>ul>li{
+  padding:5px 138px;
+}
+.text-box>ul>li>a{
+  font-size: 13px;
+}
+.about-bottom-text{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 286px;
+  margin-top: 70px;
+  margin-bottom: 30px;
+}
+.about{
+  width: 50%;
+}
+.about>a{
+  display: block;
+  font-size: 13px;
+}
+.foot-box{
+  display: block;
+  width: 100%;
+  height: 78px;
+  background-color:#252525 ;
+}
+html>body{
+  overflow-x: hidden;
 }
