--- a/public/portfolio/이솝/index.css
+++ b/public/portfolio/이솝/index.css
@@ -33,10 +33,17 @@ label[for] {
   margin-right: auto;
 }
 .con {
-  max-width: 1920px;
+  max-width: 1903px;
 }
 .con-2{
-    max-width: 1700px;
+    max-width: 1903px;
+}
+.con-3{
+  max-width: 1743px;
+}
+.con-3{
+  margin-left: auto;
+  margin-right: auto;
 }
 .block {
   display: block;
@@ -174,7 +181,7 @@ label[for] {
     width: 100%;
     height: 0;
     animation-name: menuBar;
-    animation-duration: 3s;
+    animation-duration: 1.8s;
     animation-fill-mode: forwards;
     overflow: hidden;
 }
@@ -202,7 +209,7 @@ label[for] {
     width: 100%;
     height: 48px;
     animation-name: spBar;
-    animation-duration: 2s;
+    animation-duration: 1.8s;
     animation-fill-mode: forwards;
     overflow: hidden;
 }
@@ -211,14 +218,34 @@ label[for] {
     height: 0;
   }
   100%{
-    height: 46.5px;
+    height: 48px;
   }
+}
+.text-bar{
+  position: absolute;
+  top:30%;
+  left: 10%;
+  width: 589.95px;
+  animation-name: textBar;
+  animation-duration: 1.8s;
+  animation-fill-mode: forwards;
+}
+@keyframes textBar{
+0%{
+  top:20%;
+}
+100%{
+  top:30%;
+}
 }
 .shopping-bar>a>svg{
     fill:white;
     width: 22px;
-    height: auto; 
+    height: 22px; 
     margin-left: 20px;
+    stroke-width: 1px;
+    stroke: #FFFEF2;
+
 }
 .shopping-bar>a{
     position: relative;
@@ -239,6 +266,7 @@ label[for] {
 }
 
 .bn-bar{
+  position: relative;
     background-size:cover;
     height:85vh;
     min-width: 1025px;
@@ -251,7 +279,7 @@ label[for] {
 .bn-top-bar{
     position: relative;
     top: 2.5%;
-    left: 2%;
+    left: 1.5%;
 }
 .bn-top-bar>.top-box{
     top: 0;
@@ -266,7 +294,7 @@ label[for] {
     display: flex;
     margin: 10px 12px;
     font-size: 14px;
-    color: #252525;
+    color: rgb(49, 48, 48);
 }
 .top-box>ul>li>a::after{
     content: "";
@@ -286,10 +314,10 @@ label[for] {
 .login{
     display: flex;
     justify-content: flex-end;
-    margin-right: 5%;
+    margin-right: 3.485%;
 }
 .login>li>span{
-    background-color: black;
+    background-color: #333;
     width: 8px;
     height: 8px;
     display: flex;
@@ -299,25 +327,28 @@ label[for] {
     margin:10px;
     display: block;
     z-index: 999;
-    margin-top: 15px;
+    margin-top: 16.5px;
+    margin-left: 20px;
+    cursor: pointer;
     
 }
 .text-bar{
     position: absolute;
     top:30%;
     left: 15%;
-    width: 599px;
+    width: 589.95px;
 
 }
 .text-bar>.view-bt{
     width: 205px;
     height: 37px;
     border:1px solid rgba(51, 51, 51, .2);
-    margin-top:40px;
+    margin-top:30px;
     display: block;
     padding-top:20px;
     font-size: 14px;
     color: #333;
+    cursor: pointer;
     
     transition: background-color .3s;
 
@@ -328,6 +359,8 @@ label[for] {
 }
 .text-bar>.view-bt>i{
     margin-left: 80px;
+    font-size: 13px;
+    color: rgba(66, 61, 61, 0.719);
 }
 .text-bar>.view-bt>a{
     display: inline-block;
@@ -337,14 +370,31 @@ label[for] {
 .aesop-logo{
     width: 100px;
     position: absolute;
-    top: 33%;
-    left:2%;
+    top: 30.5%;
+    left:2.1%;
     fill: #333;
-}
+    cursor: pointer;
+    animation-name: Logo;  
+    animation-duration: 1.8s;
+    animation-fill-mode: forwards;
+  }
+  @keyframes Logo{
+  0%{
+    top:20.5%;
+  }
+  100%{
+    top:30.5%;
+  }
+  }
+
+
 .text-bar>h1{
     font-weight: normal;
     display: block;
     color: #333;
+    font-size: 30px;
+    margin: 35px 0;
+    margin-top:17px;
 
 }
 .text-bar>h5:first-of-type{
@@ -354,44 +404,59 @@ label[for] {
     font-weight: normal;
     color: #333;
     font-size: 1rem;
+    line-height: 1.7;
 
 }
-body, ul, li, h1, h2, h3, h4 {
+body, ul, li, h1, h2, h3, h4 , h5 {
   margin:0;
 }
 .owl-carousel{
   position:relative;
 }
+.my-slider-1{
+  margin-top:10%
+}
 .my-slider-1 .item>h4>img{
   height:440px;
   width:auto;
+  cursor: pointer;
+}
+.my-slider-1 .item>h3>img{
+  height:273px;
+  width: 440px;
+  width:auto;
+  cursor: pointer;
+}.my-slider-1 .item>h3,.my-slider-1 .item>h4{
+  margin: 0 90px;
 }
 .my-slider-1 .item {
   font-size:15rem;
   display:flex;
   min-width:700x;
-  min-height:700px;
+  min-height:500px;
   justify-content:center;
   align-items:flex-end;
 }
 
-.my-slider-1 > .owl-carousel:hover > .owl-nav > .owl-prev{
-  left:-10px;}
+.my-slider-1:hover > .owl-carousel > .owl-nav > .owl-prev{
+  left:-85px;}
 .my-slider-1 > .owl-carousel > .owl-nav > .owl-prev{
   position:absolute;
-  top:62%;
-  left:-100px;
+  top:38%;
+  left:-200px;
   border:none;
-  transition:left .4s;
+  transition: all 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  overflow-x: hidden;
 }
-.my-slider-1 > .owl-carousel:hover > .owl-nav > .owl-next{
-  right:-10px;
+.my-slider-1:hover > .owl-carousel > .owl-nav > .owl-next{
+  right:-83px;
 }
 .my-slider-1 > .owl-carousel > .owl-nav > .owl-next{
     position:absolute;
-  top:62%;
-  right:-100px;
-  transition:right .4s;
+  top:38%;
+  right:-200px;
+  transition: all 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  overflow-x: hidden;
 }
 
 button{
@@ -427,6 +492,22 @@ button{
 .item>h4>a:nth-of-type(2){
   color: #5f5f5f;
 }
+.item>h3>a{
+  display: block;
+  font-size: 14px;
+  text-align: center;
+  font-weight: normal;
+  max-width: 378px;
+  line-height: 1.6;
+
+}
+.item>h3>a:nth-of-type(1):hover>span{
+  border-bottom: solid 1px black;
+  width: 100%;
+}
+.item>h3>a:nth-of-type(2){
+  color: #5f5f5f;
+}
 body{
   background-color: #FFFEF2;
 }
@@ -434,7 +515,7 @@ body{
   position: relative;
   background-color: rgb(172, 172, 172);
   height: 2px;
-  width: 1765px;
+  width: 1743px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
@@ -450,7 +531,7 @@ body{
 
 }
 .about-item{
-  margin-top: 13%;
+  margin-top: 12%;
 }
 .about-item-2{
   margin-top: 5%;
@@ -474,14 +555,20 @@ body{
   
 }
 .ab-title{
+  width: 547.67px;
   padding: 115px;
   padding-top: 0;
+  padding-left: 80px;
 }
 .ab-title>h1{
   font-weight: lighter;
   font-family: 'Nanum Myeongjo', serif;
   color: #363632;
   font-size: 30px;
+  margin:28px 0 ;
+}
+.ab-title>h5:nth-of-type(1){
+  font-size: 14px;
 }
 .ab-title>h5{
   line-height:1.7 ;
@@ -489,13 +576,14 @@ body{
   font-size: 16px;
 }
 .ab-title>.ab-view{
-  width: 205px;
+  width: 208px;
   height: 37px;
   border:1px solid rgba(51, 51, 51, .2);
-  margin-top:40px;
+  margin-top:30px;
   padding-top:20px;
   font-size: 14px;
   color: #333;
+  cursor: pointer;
   
   transition: background-color .3s;
 }
@@ -523,13 +611,17 @@ body{
   margin-top:3px;
 }
 .about-img>h1{
-  font-size: 15px;
+  font-size: 14px;
+  color: #666;
   padding: 30px;
+  padding-left: 20px;
   font-weight: normal;
-  border-bottom: solid 1px #5f5f5f;
-}.bottom-text{
+  border-bottom:1px solid rgba(51, 51, 51, .2);
+}
+.bottom-text{
   text-align: center;
-  padding: 190px;
+  padding: 200px;
+  padding-bottom: 242px;
 }
 .bottom-text>h1{
   font-family:'Source Serif Pro', serif;
@@ -540,9 +632,11 @@ body{
 .bottom-text>h5{
   font-weight: normal;
   font-size: 14px;
+  padding-top: 25px;
 }
 .copy-light{
   border-top: 1px solid rgba(51, 51, 51, .2);
+  padding-top: 20px;
 }
 .text-bar-2{
   white-space: nowrap;
@@ -551,32 +645,123 @@ body{
   display: flex;
   white-space: nowrap;
 }
+.text-box{
+  margin-right: -30px;
+}
 .text-box>ul>li{
-  padding:5px 138px;
+  padding-right: 270px;
+  padding-bottom: 10px;
+  color: #333;
+}
+.text-box>ul:last-of-type>li{
+  margin-left: -30px;
+}
+.text-box>ul>li>svg{
+  width: 8px;
+  height: 8px;
+  padding-left: 8px;
+
+}
+.text-box>ul>li:first-of-type>a{
+  display: block;
+  padding-bottom: 20px;
+  color: rgba(51, 51, 51, 0.733);
 }
 .text-box>ul>li>a{
-  font-size: 13px;
+  font-size: 14px;
 }
 .about-bottom-text{
   display: flex;
   justify-content: flex-end;
-  margin-right: 286px;
+  margin-right: 75px;
   margin-top: 70px;
   margin-bottom: 30px;
 }
 .about{
-  width: 50%;
+  width: 1030px;
+  line-height: 1.7;
 }
+
 .about>a{
   display: block;
-  font-size: 13px;
+  font-size: 14px;
+  color: #333;
 }
 .foot-box{
   display: block;
   width: 100%;
-  height: 78px;
+  height: 75px;
   background-color:#252525 ;
+  padding-bottom: 3px;
 }
 html>body{
   overflow-x: hidden;
+}
+.bn-bar,.bn-text-bar,.aesop-logo,.my-slider-1,.slider-line,.about-item,.about-item-2,.bottom-text{
+  opacity: 0;
+  transition: opacity 1.7s  .2s;}
+.bn-bar.active,.bn-text-bar.active,.aesop-logo.active,.my-slider-1.active,.slider-line.active,.about-item.active,.about-item-2.active,.bottom-text.active{
+  opacity: 1;
+}
+.about-item,.about-item-2{
+  opacity: 0;
+  transition: opacity 1.7s  .6s;
+}
+.about-item.active,.about-item-2.active{
+  opacity: 1;
+}
+.bottom-text{
+  opacity: 0;
+  transition: opacity 1.7s  .6s;
+}
+.bottom-text.active{
+  opacity: .985;
+}
+html{
+  box-sizing: border-box;
+}
+.text-bar-2 {
+  margin-left: 30px;
+  width:auto;
+}
+.text-bar-2>h3{
+  margin: 40px 0;
+  margin-top: 60px;
+  padding-bottom: 5px;
+  font-weight: normal;
+
+  font-size: 25px;
+  color: rgba(51, 51, 51, 0.808);
+  border-bottom: solid 1px rgb(201, 201, 201);
+}
+.text-bar-2>h5{
+  font-weight: normal;
+  font-size: 14px;
+  color: #363632c9;
+}
+.foot-box div{
+  color:rgb(204, 203, 203);
+  font-size: 14px;
+  margin: 30px;
+  font-weight: normal;
+}
+.foot-box div>a{
+  display: block;
+}
+.foot-box{
+  display: flex;
+}
+.foot-box{
+  display: flex;
+  justify-content: space-between;
+}
+.foot-box>.langs{
+  border-bottom: solid 1px transparent;
+  transition: border .1s;
+}
+.foot-box>.langs:hover{
+  border-bottom: solid 1px white;
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  transition: border .4s;
 }
